@@ -28,6 +28,6 @@ routines := accept bind connect getpeername getsockname getsockopt	\
 	    setsockopt shutdown socket socketpair isfdtype opensock	\
 	    sockatmark accept4 recvmmsg sendmmsg
 
-aux	 := have_sock_cloexec
+aux	 := have_sock_cloexec sa_len
 
 include ../Rules
